--- a/Views/TeachingAssistant/Advances.cshtml
+++ b/Views/TeachingAssistant/Advances.cshtml
@@ -199,10 +199,9 @@
                                 <table class="table table-hover">
                                     <thead class="table-light">
                                         <tr>
-                                            <th class="pe-0 text-nowrap">TT</th>
                                             <th class="ps-3 text-nowrap">Mô tả công việc</th>
-                                            <th style="max-width: 100px;" class="ps-3 text-nowrap">T.Gian</th>
-                                            <th class="ps-3 text-nowrap">T.Gian hoàn thành</th>
+                                            <th style="max-width: 120px;" class="ps-3 text-nowrap">Giờ quy đổi</th>
+                                            <th class="ps-3 text-nowrap">Thời hạn hoàn thành</th>
                                             <th class="ps-3 text-nowrap">Nơi làm việc</th>
                                             <th class="ps-3 text-nowrap">Kết quả mong đợi</th>
                                         </tr>
@@ -212,18 +211,13 @@
                                         {
                                             <tr id="parent-@j" name="@j">
                                                 <td valign="middle" class="pe-0 ps-3">
-                                                    <div id="tt-@j" class="form-control">
-                                                        @j
-                                                    </div>
-                                                </td>
-                                                <td valign="middle" class="pe-0 ps-3">
                                                     <div class="form-control">Mô tả công việc @j</div>
                                                 </td>
                                                 <td valign="middle" style="width: 80px;" class="pe-0 ps-3">
                                                     <div class="form-control">@(j)h</div>
                                                 </td>
                                                 <td valign="middle" class="pe-0 ps-3">
-                                                    <div class="form-control">Trước 0@(j)/10/2024</div>
+                                                    <div class="form-control">0@(j)/10/2024</div>
                                                 </td>
                                                 <td valign="middle" class="pe-0 ps-3">
                                                     <div class="form-control">Tại nhà</div>
